cast crew alignment fixes

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -886,7 +886,7 @@ body {
             clear: both;
 
             .member {
-                margin: 1em .5em;
+                margin: 1em .2em;
                 display: block;
                 cursor: pointer;
 
@@ -963,7 +963,7 @@ body {
                             color: beige;
                             font-size: .875em;
                             line-height: 1.5em;
-                            display:flex;
+                            padding: .15em 0;
 
                             @media (max-width: 1160px) {
                                 margin: 0 auto 1em;
